test_regress/t/t_interface_generic_bad3.out
%Error: t/t_interface_generic_bad3.v:15:9: Can't find definition of scope/variable: 'b'
   15 |     if (b.k != 9) $stop;
      |         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-PINNOTFOUND: t/t_interface_generic_bad3.v:21:42: Pin not found: '__pinNumber2'
   21 |   GenericModule genericModule (inf_inst, inf_inst);
      |                                          ^~~~~~~~
                                                      : ... Location of instance's module declaration
   11 | module GenericModule (interface a);
      |        ^~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/PINNOTFOUND?v=latest
%Error: Exiting due to
